P4ADEV-5033 code review: enhance payments reporting service to support multi-page ZIP exports with broker IPA prefix